/*
 * $Id: ChangeLog,v 1.5232 2006/11/06 11:00:45 modalsist Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-11-06 18:30 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/compiler/harbour.sly
    - Removed condition in SwitchCases which was ambigious but no longer needed due to deadcode elimination

  * source/rtl/cstruct.prg
    - Removed condition limiting :AsString method generation to arrays of [unsigned] char - now applicable to all arrays

2006-11-06 08:45 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source\rtl\tbrowse.prg
    ! fixed ::nHeaderHeight and ::nFooterHeight initial value in configure()
      method.

2006-11-06 11:20 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
   *make_b32.bat
   *make_dc.bat
   *make_gc.bat
   *make_pc.bat
   *make_w32.bat
    + Added deletion on CLEAN of libraries bmdbfcdx and mt.

2006-11-02 15:15 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source\rtl\win32ole.prg
    * Corrected 2 redundant usages of pDisp->AddRef()

  * source/pp/ppcore.c
    * Reduced MAX_CICLES to 256 which should be plenty (unless I miss something)

  * utils/xbscript/xbscript.prg
    * Minor correction

2006-11-02 12:19 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
   *source/rdd/bmdbfcdx/bmdbfcdx1.c
   *source/rdd/dbfcdx/dbfcdx1.c
    ! Corrected OrdKeyGoto( nKeyNo ) on a DBF without index and with filter,
      it was positioned in nKeyNo + 1, when it had to do it in nKeyNo.

2006-11-01 19:13 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/compiler/harbour.c
    ! Fixed typo in hb_compOptimizeFrames() generation of HB_P_LARGEFRAME when static frame is ommited.

2006-10-30 23:40 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source\ct\dattime3.prg
    ! fixed showtime() function to display time only in screen device